<PreferenceScreen
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
            app:title="Proxy">

        <EditTextPreference
                app:key="host"
                app:title="host"
                app:useSimpleSummaryProvider="true"/>
        <EditTextPreference
                app:key="port"
                app:title="port"
                app:useSimpleSummaryProvider="true"/>

        <ListPreference
                app:key="ProxyType"
                app:title="ProxyType"
                app:entries="@array/Proxy"
                app:entryValues="@array/Proxy"
                app:defaultValue="HTTP"
                app:useSimpleSummaryProvider="true"/>

    </PreferenceCategory>

    <PreferenceCategory
            app:title="@string/sync_header">

        <SwitchPreferenceCompat
                app:key="sync"
                app:title="@string/sync_title"/>

        <SwitchPreferenceCompat
                app:key="attachment"
                app:title="@string/attachment_title"
                app:summaryOn="@string/attachment_summary_on"
                app:summaryOff="@string/attachment_summary_off"
                app:dependency="sync"/>

    </PreferenceCategory>
</PreferenceScreen>